Fix iframes with transparent backgrounds in dark mode

--- a/client/main.styl
+++ b/client/main.styl
@@ -20,6 +20,7 @@ iframe
   height: 100%
   overflow: hidden
   position: absolute
+  background: white
 
 nav
   display: flex
